feat: find one user swag
